--- a/FruitClassification.ipynb
+++ b/FruitClassification.ipynb
@@ -349,61 +349,15 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "oe8-Yu2_KBf3",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "sxEk7tDliEYA",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 67
-        },
-        "outputId": "cf6311a6-eb19-4e19-835e-dd2b2bf78332"
-      },
-      "source": [
-        "import cv2\n",
-        "import numpy as np\n",
-        "I=cv2.imread('Apple.jpg')\n",
-        "Im=np.reshape(I,(1,100,100,3))\n",
-        "result=model.predict(Im)\n",
-        "if(np.argmax(result)==0):\n",
-        "  print('Apple')\n",
-        "if(np.argmax(result)==1):\n",
-        "  print('Banana')\n",
-        "if(np.argmax(result)==2):\n",
-        "  print('oragnge')"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "1.098634875550562 0.3346938813219265\n",
-            "[[0.33802533 0.33093455 0.33104008]]\n",
-            "Apple\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "W4Ahsc4Eld49",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
+        "import cv2\n",
+        "image=cv2.imread(\"image.jpg\")\n",
+        "Image=cv2.resize(image,(100,100))\n",
+        "result=model.predict(Image)\n",
         "if(np.argmax(result)==0):\n",
         "  print('Apple')\n",
         "if(np.argmax(result)==1):\n",
